intellij preview fix